--- a/components/UnreadEmails/UnreadEmailsS.scss
+++ b/components/UnreadEmails/UnreadEmailsS.scss
@@ -2,10 +2,18 @@
 
 .UnreadEmails {
   min-height: 100px;
-  overflow: scroll;
+
+  > header {
+    text-transform: uppercase;
+    padding: 10px 20px;
+    color: $primary-color-lighter;
+  }
 
   > ul {
+    overflow: scroll;
+    background-color: $grey-dark;
     display: flex;
+    padding: 20px 0px;
 
     > li {
       display: flex;
@@ -20,7 +28,6 @@
   }
 
   .UnreadEmailCard {
-    box-shadow: $shadow;
     width: 300px;
   }
 
@@ -30,7 +37,6 @@
   }
 
   .NoItems {
-    box-shadow: $shadow;
     margin: 25px auto 0px auto;
   }
 }
