--- a/styleGuide/guide/_buttons.scss
+++ b/styleGuide/guide/_buttons.scss
@@ -1,10 +1,9 @@
 a.button, button {
+  @include font-line(14px);
+
   border-radius: 6px;
   border: 1px solid $primary-color;
   padding: 8px 20px;
-  font-size: 14px;
-  line-height: 14px;
-  cursor: pointer;
   font-weight: $normal;
   display: inline-block;
   letter-spacing: 1px;
