--- a/components/UnreadEmailCard/UnreadEmailCardS.scss
+++ b/components/UnreadEmailCard/UnreadEmailCardS.scss
@@ -5,6 +5,10 @@
   background-color: $white;
   padding: 15px 10px;
 
+  .from {
+    color: $text-color-light;
+  }
+
   > header {
     display: flex;
     justify-content: space-between;
